Adds GameStatsCmd