@@ -1,11 +1,10 @@
-/*
 package com.shadorc.shadbot.command.gamestats;
 
 import com.shadorc.shadbot.api.ServerAccessException;
 import com.shadorc.shadbot.api.json.TokenResponse;
 import com.shadorc.shadbot.api.json.gamestats.diablo.hero.HeroResponse;
+import com.shadorc.shadbot.api.json.gamestats.diablo.profile.HeroId;
 import com.shadorc.shadbot.api.json.gamestats.diablo.profile.ProfileResponse;
-import com.shadorc.shadbot.command.CommandException;
 import com.shadorc.shadbot.core.command.BaseCmd;
 import com.shadorc.shadbot.core.command.CommandCategory;
 import com.shadorc.shadbot.core.command.Context;
@@ -13,10 +12,9 @@ import com.shadorc.shadbot.data.credential.Credential;
 import com.shadorc.shadbot.data.credential.CredentialManager;
 import com.shadorc.shadbot.object.Emoji;
 import com.shadorc.shadbot.object.RequestHelper;
-import com.shadorc.shadbot.object.help.CommandHelpBuilder;
-import com.shadorc.shadbot.object.message.UpdatableMessage;
 import com.shadorc.shadbot.utils.*;
 import discord4j.core.spec.EmbedCreateSpec;
+import discord4j.rest.util.ApplicationCommandOptionType;
 import io.netty.handler.codec.http.HttpResponseStatus;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
@@ -26,6 +24,7 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 
 import static com.shadorc.shadbot.Shadbot.DEFAULT_LOGGER;
@@ -42,67 +41,70 @@ public class DiabloCmd extends BaseCmd {
     }
 
     private final AtomicLong lastTokenGeneration;
-    private TokenResponse token;
+    private final AtomicReference<TokenResponse> token;
 
     public DiabloCmd() {
-        super(CommandCategory.GAMESTATS, List.of("diablo"), "d3");
-        this.setDefaultRateLimiter();
+        super(CommandCategory.GAMESTATS, "diablo", "Search for Diablo 3 statistics");
+        this.addOption("region", "User's region", true, ApplicationCommandOptionType.STRING,
+                DiscordUtil.toOptions(Region.class));
+        this.addOption("battletag", "User's battletag", true, ApplicationCommandOptionType.STRING);
 
         this.lastTokenGeneration = new AtomicLong();
-        this.token = null;
+        this.token = new AtomicReference<>();
     }
 
     @Override
-    public Mono<Void> execute(Context context) {
-        final List<String> args = context.requireArgs(2);
+    public Mono<?> execute(Context context) {
+        final Region region = context.getOptionAsEnum(Region.class, "region").orElseThrow();
+        final String battletag = context.getOptionAsString("battletag").orElseThrow().replace("#", "-");
 
-        final Region region = EnumUtils.parseEnum(Region.class, args.get(0),
-                new CommandException(String.format("`%s` is not a valid Region. %s",
-                        args.get(0), FormatUtils.options(Region.class))));
+        return context.createFollowupMessage(Emoji.HOURGLASS + " (**%s**) Loading Diablo 3 statistics...", context.getAuthorName())
+                .flatMap(messageId -> this.requestAccessToken()
+                        .then(RequestHelper.fromUrl(this.buildProfileApiUrl(region, battletag))
+                                .to(ProfileResponse.class))
+                        .flatMap(profile -> {
+                            if (profile.getCode().orElse("").equals("NOTFOUND")) {
+                                return context.editFollowupMessage(messageId,
+                                        Emoji.MAGNIFYING_GLASS + " (**%s**) This user doesn't play Diablo 3 or doesn't exist.",
+                                        context.getAuthorName());
+                            }
 
-        final UpdatableMessage updatableMsg = new UpdatableMessage(context.getClient(), context.getChannelId());
-
-        final String battletag = args.get(1).replace("#", "-");
-
-        return updatableMsg.setContent(String.format(Emoji.HOURGLASS + " (**%s**) Loading Diablo III stats...", context.getUsername()))
-                .send()
-                .then(this.requestAccessToken())
-                .then(Mono.fromCallable(() -> String.format("https://%s.api.blizzard.com/d3/profile/%s/?access_token=%s",
-                        region.toString().toLowerCase(), NetUtils.encode(battletag), this.token.getAccessToken())))
-                .flatMap(url -> RequestHelper.fromUrl(url).to(ProfileResponse.class))
-                .flatMap(profile -> {
-                    if (profile.getCode().map("NOTFOUND"::equals).orElse(false)) {
-                        return Mono.just(updatableMsg.setContent(String.format(
-                                Emoji.MAGNIFYING_GLASS + " (**%s**) This user doesn't play Diablo 3 or doesn't exist.",
-                                context.getUsername())));
-                    }
-
-                    return Flux.fromIterable(profile.getHeroIds())
-                            .map(heroId -> String.format("https://%s.api.blizzard.com/d3/profile/%s/hero/%d?access_token=%s",
-                                    region, NetUtils.encode(battletag), heroId.getId(), this.token.getAccessToken()))
-                            .flatMap(heroUrl -> RequestHelper.fromUrl(heroUrl).to(HeroResponse.class)
-                                    .onErrorResume(ServerAccessException.isStatus(HttpResponseStatus.INTERNAL_SERVER_ERROR),
-                                            err -> Mono.empty()))
-                            .filter(hero -> hero.getCode().isEmpty())
-                            // Sort heroes by ascending damage
-                            .sort(Comparator.comparingDouble(hero -> hero.getStats().getDamage()))
-                            .collectList()
-                            .map(heroResponses -> {
-                                if (heroResponses.isEmpty()) {
-                                    return updatableMsg.setContent(String.format(
-                                            Emoji.MAGNIFYING_GLASS + " (**%s**) This user doesn't have any heroes or they are not found.",
-                                            context.getUsername()));
-                                }
-                                Collections.reverse(heroResponses);
-                                return updatableMsg.setEmbed(DiabloCmd.getEmbed(context.getAvatarUrl(), profile, heroResponses));
-                            });
-                })
-                .flatMap(UpdatableMessage::send)
-                .onErrorResume(err -> updatableMsg.deleteMessage().then(Mono.error(err)))
-                .then();
+                            return Flux.fromIterable(profile.getHeroIds())
+                                    .map(heroId -> this.buildHeroApiUrl(region, battletag, heroId))
+                                    .flatMap(heroUrl -> RequestHelper.fromUrl(heroUrl)
+                                            .to(HeroResponse.class)
+                                            .onErrorResume(ServerAccessException.isStatus(HttpResponseStatus.INTERNAL_SERVER_ERROR),
+                                                    err -> Mono.empty()))
+                                    .filter(hero -> hero.getCode().isEmpty())
+                                    // Sort heroes by ascending damage
+                                    .sort(Comparator.comparingDouble(hero -> hero.getStats().getDamage()))
+                                    .collectList()
+                                    .flatMap(heroResponses -> {
+                                        if (heroResponses.isEmpty()) {
+                                            return context.editFollowupMessage(messageId,
+                                                    Emoji.MAGNIFYING_GLASS + " (**%s**) This user doesn't have " +
+                                                            "any heroes or they are not found.",
+                                                    context.getAuthorName());
+                                        }
+                                        Collections.reverse(heroResponses);
+                                        return context.editFollowupMessage(messageId,
+                                                DiabloCmd.formatEmbed(context.getAuthorAvatarUrl(), profile, heroResponses));
+                                    });
+                        }));
     }
 
-    private static Consumer<EmbedCreateSpec> getEmbed(String avatarUrl, ProfileResponse profile, List<HeroResponse> heroResponses) {
+    private String buildProfileApiUrl(final Region region, final String battletag) {
+        return "https://%s.api.blizzard.com/d3/profile/%s/?access_token=%s"
+                .formatted(region.name().toLowerCase(), NetUtil.encode(battletag), this.token.get().getAccessToken());
+    }
+
+    private String buildHeroApiUrl(final Region region, final String battletag, final HeroId heroId) {
+        return "https://%s.api.blizzard.com/d3/profile/%s/hero/%d?access_token=%s"
+                .formatted(region, NetUtil.encode(battletag), heroId.getId(), this.token.get().getAccessToken());
+    }
+
+    private static Consumer<EmbedCreateSpec> formatEmbed(final String avatarUrl, final ProfileResponse profile,
+                                                         final List<HeroResponse> heroResponses) {
         final String description = String.format("Stats for **%s** (Guild: **%s**)"
                         + "%n%nParangon level: **%s** (*Normal*) / **%s** (*Hardcore*)"
                         + "%nSeason Parangon level: **%s** (*Normal*) / **%s** (*Hardcore*)",
@@ -110,14 +112,14 @@ public class DiabloCmd extends BaseCmd {
                 profile.getParagonLevel(), profile.getParagonLevelHardcore(),
                 profile.getParagonLevelSeason(), profile.getParagonLevelSeasonHardcore());
 
-        final String heroes = FormatUtils.format(heroResponses,
-                hero -> String.format("**%s** (*%s*)", hero.getName(), hero.getClassName()), "\n");
+        final String heroes = FormatUtil.format(heroResponses,
+                hero -> "**%s** (*%s*)".formatted(hero.getName(), hero.getClassName()), "\n");
 
-        final String damages = FormatUtils.format(heroResponses,
-                hero -> String.format("%s DPS", FormatUtils.number(hero.getStats().getDamage())), "\n");
+        final String damages = FormatUtil.format(heroResponses,
+                hero -> "%s DPS".formatted(FormatUtil.number(hero.getStats().getDamage())), "\n");
 
-        return ShadbotUtils.getDefaultEmbed()
-                .andThen(embed -> embed.setAuthor("Diablo 3 Stats", null, avatarUrl)
+        return ShadbotUtil.getDefaultEmbed(embed ->
+                embed.setAuthor("Diablo 3 Stats", null, avatarUrl)
                         .setThumbnail("https://i.imgur.com/QUS9QkX.png")
                         .setDescription(description)
                         .addField("Heroes", heroes, true)
@@ -125,41 +127,24 @@ public class DiabloCmd extends BaseCmd {
     }
 
     private boolean isTokenExpired() {
-        return this.token == null
-                || TimeUtils.getMillisUntil(this.lastTokenGeneration.get()) >= TimeUnit.SECONDS.toMillis(this.token.getExpiresIn());
+        final TokenResponse token = this.token.get();
+        if (token == null) {
+            return true;
+        }
+        return TimeUtil.getMillisUntil(this.lastTokenGeneration.get()) >= TimeUnit.SECONDS.toMillis(token.getExpiresIn());
     }
 
-    */
-/**
- * Requests to update the Blizzard token, if expired.
- *
- * @return A {@link Mono} that completes once the token has been successfully updated, if expired.
- *//*
-
-    private Mono<Void> requestAccessToken() {
-        final Mono<TokenResponse> requestAccessToken = RequestHelper.fromUrl(ACCESS_TOKEN_URL)
-                .to(TokenResponse.class)
-                .doOnNext(token -> {
-                    this.token = token;
-                    this.lastTokenGeneration.set(System.currentTimeMillis());
-                    DEFAULT_LOGGER.info("Blizzard token generated: {}", this.token.getAccessToken());
-                });
-
-        return Mono.justOrEmpty(this.token)
-                .filter(token -> !this.isTokenExpired())
-                .switchIfEmpty(requestAccessToken)
-                .then();
-    }
-
-    @Override
-    public Consumer<EmbedCreateSpec> getHelp(Context context) {
-        return CommandHelpBuilder.create(this, context)
-                .setDescription("Show player's stats for Diablo 3.")
-                .addArg("region", String.format("user's region (%s)", FormatUtils.format(Region.class, ", ")), false)
-                .addArg("battletag#0000", "case sensitive", false)
-                .setExample(String.format("`%s%s eu Shadorc#2503`", context.getPrefix(), this.getName()))
-                .build();
+    private Mono<TokenResponse> requestAccessToken() {
+        if (this.isTokenExpired()) {
+            return RequestHelper.fromUrl(ACCESS_TOKEN_URL)
+                    .to(TokenResponse.class)
+                    .doOnNext(token -> {
+                        this.token.set(token);
+                        this.lastTokenGeneration.set(System.currentTimeMillis());
+                        DEFAULT_LOGGER.info("Blizzard token generated: {}", token.getAccessToken());
+                    });
+        }
+        return Mono.just(this.token.get());
     }
 
 }
-*/
